perf: Cache Spec.basePath at construction (W1)
basePath() was previously recomputed via URI.create on every request
through RequestPreparationFilter.stripBasePath. The result is
spec-static, so promote it to a record component populated in
Spec.from(...). Eliminates ~100 MB of URI allocations and ~26 CPU
samples per JFR run; k6 throughput +2.6% (44.2k -> 45.3k rps),
p95 -40 µs.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>